<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MathTest</string>
    <string name="Start">Start</string>
    <string name="MathTest">MathTest</string>
    <string name="a">2 + 2 = ?</string>
    <string name="q">4</string>
    <string name="w">2</string>
    <string name="e">1</string>
    <string name="r">5</string>
    <string name="answer">Answer</string>
    <string name="dontanswer1">task1(don\'t answer)</string>
    <string name="Molodes">Вы Молодец!</string>
    <string name="answer1">Answer1</string>
    <string name="f">3</string>
    <string name="n">4</string>
    <string name="п">Вы ошиблись!</string>
    <string name="р">Посмотреть Ответ</string>
    <string name="dm3">3 дм</string>
    <string name="dm6">6 дм</string>
    <string name="dm10">10 дм</string>
    <string name="dm4">4 дм</string>
    <string name="TestBut">TestButton</string>
    <string name="celindr">celindr</string>

    <array name="main_menu_array">
        <item>Geometry</item>
        <item>Algebra</item>
    </array>
    <array name="geometry_menu_array">
        <item>Cylinder</item>
        <item>Sphere</item>
    </array>
</resources>
